# escrutinio-elecciones-col

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: colombia_votacion_header.csv  download_error_handling.md  mkdocs.yml  project_organization.md  web_scraping.md
docs/docs/: index.md
elecc_colombia/: __init__.py  acta_handwrite_ocr_reader.py  acta_handwrite_reader.py  acta_text_reader.py  actas_log.py  actas_processor.py  actas_scraper.py  browser_utils.py  config.py  dataset.py  features.py  plots.py
elecc_colombia/modeling/: predict.py  train.py
escrutinio-elecciones-col/: __init__.py  dataset.py  features.py  plots.py
escrutinio-elecciones-col/modeling/: predict.py  train.py
notebooks/: 0.01_example_playwright.ipynb  0.02_selecting_options_website.ipynb  0.03_download_actas.ipynb  0.03_download_actas_example.ipynb  0.1_example_playwright.ipynb  1.01_download_actas_create_log.ipynb  1.01_extract_info_acta_pdf.ipynb  1.02_extract_info_acta_pdf.ipynb  1.03_interpret_handwriting_data_acta.ipynb  2.01_check_all_actas_downloaded.ipynb
scripts/: download_actas.py
