[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "escrutinio_elecciones_col"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Mauricio Hernandez" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.14.0"


[tool.ruff]
line-length = 99
src = ["escrutinio_elecciones_col"]
include = ["pyproject.toml", "escrutinio_elecciones_col/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["escrutinio_elecciones_col"]
force-sort-within-sections = true

